--- a/Spread/Article/ACircularOutcomeBayesianGLMKnitr.tex
+++ b/Spread/Article/ACircularOutcomeBayesianGLMKnitr.tex
@@ -83,7 +83,7 @@
 
 \section{Introduction}
 
-Circular data is data that is measured in angles or directions. They are frequently encountered in scientific fieldsas diverse as Molecular Biology, Cognitive Psychology, Political Science \citep{gill2010} and Earth Sciences. Circular data differ from linear data in the sense that circular data are measured in a periodical sample space. For example, an angle of $1^{\circ}$ is quite close to an angle $359^{\circ},$ although linear intuition would suggest otherwise.
+Circular data is data that is measured in angles or directions. They are frequently encountered in scientific fields as diverse as Molecular Biology, Cognitive Psychology, Political Science \citep{gill2010} and Earth Sciences. Circular data differ from linear data in the sense that circular data are measured in a periodical sample space. For example, an angle of $1^{\circ}$ is quite close to an angle $359^{\circ},$ although linear intuition would suggest otherwise.
 
 Because of this, linear models may not fully describe the process that has generated the circular data of interest. Circular data analysis has been developed to deal with this, but the attention to this type of data has been limited. Only slightly more than a handful of in-depth books on circular data analysis have been published \citep{fisher1995statistical,mardia1999directional,pewsey2013circular}, and statistical methods are generally fairly limited. The Bayesian paradigm, in particular MCMC methods, may provide a flexible new approach to analyzing circular data.
 
@@ -117,10 +117,10 @@ The link function maps $\boldsymbol\beta^T \boldsymbol{x}_i \in \mathbb{R}$ to t
 A popular choice is
 \begin{equation}
 g(x) = 2 \tan^{-1}(x),
-\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}. To ensure that the link function has the same form, all predictors must be standardized. % Mind you, it is probably better to add parameters to the model that account for mean and variance of the predictors. This might take into account the uncertainty about the mean and variance of the predictor?! Discuss.
+\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}. To ensure that all , all predictors must be standardized. % Mind you, it is probably better to add parameters to the model that account for mean and variance of the predictors. This might take into account the uncertainty about the mean and variance of the predictor?! Discuss.
 
 \begin{figure}
-% {\centering \includegraphics[width=\linewidth]{figure/Link.pdf} }
+{\centering \includegraphics[width=\linewidth]{figure/Link.pdf} }
 \caption{Link function $g(x) = 2 \tan^{-1}(x).$}
 \label{linkfunc}
 \end{figure}
@@ -135,36 +135,24 @@ L(\beta_0, \boldsymbol{\beta}, \kappa \vert \boldsymbol{\theta}, \boldsymbol{X})
 
 %It can be shown (see Appendix A) that the conditional distribution of $\beta_0$ is proportional to $\mathcal{VM}(\beta_0 \vert \bar\psi, R_{\psi} \kappa).$ This makes it straightforward to sample from $\beta_0$ as in \citet{fisher1995statistical}. %Conditionals for $\kappa$ and $\boldsymbol\beta$ are not of known form and require special attention.
 
-\subsection{Prior}
-
-For $\beta_0$ and $\kappa$, a conjugate prior will be used. Setting $\psi_i = \theta_i - g(\boldsymbol\beta^T \boldsymbol{x}_i)$ leaves us with simply the regular von Mises likelihood $L_{\mathcal{VM}}(\beta_0, \kappa \vert \boldsymbol\psi)$, where $\beta_0$ is the mean direction. \citet{guttorp1988finding} present a conjugate prior for the von Mises distribution. Applied to this situation, it is given up to a constant of proportionality by
-\begin{equation}
-p(\mu_{\psi}, \kappa) \propto  I_0 (\kappa) ^{-c} \exp\{R_0 \kappa \cos (\mu_{\psi} - \mu_0)\},
-\end{equation}
-where $\mu_{\psi}$ represents the mean direction of the set of angles $\boldsymbol\psi$,  which represents $c$ observations of $\psi$ with prior mean direction $\mu_0$ and prior resultant length $R_0$. Note, however, that in this case this represents our prior information regarding the distribution of $\psi$ rather than $\theta$. Researchers may or may not be able to formulate prior expectations exist about $\mu_{\psi}$ and $\kappa$. Regardless, this method allows straightforward specification of a non-informative prior by setting $R_0 = 0$ and $c = 0$.
-
-For each $\beta$, a normal prior will be specified as
-\begin{equation}
-\beta \sim N(0, 10).
-\end{equation}
-
-This choice of prior will be examined in the following section.
 
 \subsection{Shape of the conditional likelihood of $\beta$}
 
 
 
-The conditional likelihood of $\boldsymbol{\beta}$ is independent of $\kappa$ and given by
-
+The conditional log-likelihood of $\boldsymbol{\beta}$ is independent of $\kappa$ and given by
 \begin{align}
-L(\boldsymbol{\beta} \vert \beta_0, \boldsymbol{\theta}, \boldsymbol{X}) &\propto
-\exp \left\lbrace \sum_{i=1}^{n} \cos \left[ \theta_i - \beta_0 - g(\boldsymbol\beta^T \boldsymbol{x}_i) \right]  \right\rbrace.
+%L(\boldsymbol{\beta} \vert \beta_0, \boldsymbol{\theta}, \boldsymbol{X}) &\propto
+%\exp \left\lbrace \sum_{i=1}^{n} \cos \left[ \theta_i - \beta_0 - g(\boldsymbol\beta^T \boldsymbol{x}_i) \right]  \right\rbrace. \\
+\ell (\boldsymbol{\beta} \vert \beta_0, \boldsymbol{\theta}, \boldsymbol{X}) &\propto
+\sum_{i=1}^{n} \cos \left[ \theta_i - \beta_0 - g(\boldsymbol\beta^T \boldsymbol{x}_i) \right]  .
 \end{align}
-For simplicity,
+For simplicity, we will consider the unidimensional case here.
 
-Due to the periodical nature of the outcome variable $\theta$, the conditional likelihood of some $\beta_j$ may have not be globally concave and may have more than one maximum. In this section, this issue will be explored.
+Due to the periodical nature of the outcome variable $\theta$, the conditional log-likelihood of some $\beta$ may have not be globally concave and may have more than one maximum. In this section, this issue will be explored.
 
-First, consider a simple dataset, with a single predictor $\boldsymbol{X} = \left\lbrace -3, -2, \dots, 2, 3 \right\rbrace $ that was standardized, and $\theta_i = \frac{\pi}{2} + 2 \tan^{-1} (x_i) + \varepsilon,$ for each $ i \in 1, 2, \dots, 7,$ where $\varepsilon \sim \mathcal{N}(0, .1)$, so that true $\beta = 1$. The relationship between the predictor and circular outcome is shown in figure \ref{SimpleDataset}.
+First, consider a simple dataset, with a single predictor $\boldsymbol{X} = \left\lbrace -3, -2, \dots, 2, 3 \right\rbrace $ that is standardized, and $\theta_i = \frac{\pi}{2} + 2 \tan^{-1} (x_i) + \varepsilon,$ for each $ i \in 1, 2, \dots, 7,$ so that true $\beta = 1$, where $\varepsilon \sim \mathcal{N}(0, .1)$. The true $\beta_0$ is $\pi$. The relationship between the predictor and circular outcome is shown in figure \ref{SimpleDataset}.
+
 
 \begin{figure}
 \label{SimpleDataset}
@@ -181,7 +169,7 @@ First, consider a simple dataset, with a single predictor $\boldsymbol{X} = \lef
 \caption{Relationship between the predictor $X$ and circular outcome $\theta$ in a simple case.}
 \end{figure}
 
-The shape of the conditional likelihood is irregular, and depends the data and the current value for $\beta_0$. Figure \ref{SimpleDataBeta} shows three possible shapes for different $\beta_0$.
+Then, the shape of the log-likelihood can be displayed conditional on values for $\beta_0$. Figure \ref{SimpleDataBeta} shows three slices of the log-likelihood for different $\beta_0$. The shape of the conditional likelihood is irregular, and depends the data and the current value for $\beta_0$. Note that as the
 
 \begin{figure}
 \label{SimpleDataBeta}
@@ -195,7 +183,7 @@ The shape of the conditional likelihood is irregular, and depends the data and t
 
 
 \end{knitrout}
-\caption{RHS of conditional likelihood.}
+\caption{Shape of the conditional likelihood for three different values for $\beta_0$.}
 \end{figure}
 
 
@@ -208,7 +196,23 @@ The shape of the conditional likelihood is irregular, and depends the data and t
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
 
 {\centering \includegraphics[width=\maxwidth]{figure/ZeroBData-1} 
-\includegraphics[width=\maxwidth]{figure/ZeroBData-2} 
+
+}
+
+
+
+\end{knitrout}
+\caption{Relationship between the predictor $X$ and circular outcome $\theta$ in a simple case.}
+\end{figure}
+
+
+
+\begin{figure}
+\label{ZeroBBeta}
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+
+{\centering \includegraphics[width=\maxwidth]{figure/ZeroBBeta-1} 
 
 }
 
@@ -218,17 +222,30 @@ The shape of the conditional likelihood is irregular, and depends the data and t
 \caption{RHS of conditional likelihood.}
 \end{figure}
 
-
-
-
-
-
 The standard deviation of the normal prior
+
+\subsection{Prior}
+
+For $\beta_0$ and $\kappa$, a conjugate prior will be used. Setting $\psi_i = \theta_i - g(\boldsymbol\beta^T \boldsymbol{x}_i)$ leaves us with simply the regular von Mises likelihood $L_{\mathcal{VM}}(\beta_0, \kappa \vert \boldsymbol\psi)$, where $\beta_0$ is the mean direction. \citet{guttorp1988finding} present a conjugate prior for the von Mises distribution. Applied to this situation, it is given up to a constant of proportionality by
+\begin{equation}
+p(\mu_{\psi}, \kappa) \propto  I_0 (\kappa) ^{-c} \exp\{R_0 \kappa \cos (\mu_{\psi} - \mu_0)\},
+\end{equation}
+where $\mu_{\psi}$ represents the mean direction of the set of angles $\boldsymbol\psi$,  which represents $c$ observations of $\psi$ with prior mean direction $\mu_0$ and prior resultant length $R_0$. Note, however, that in this case this represents our prior information regarding the distribution of $\psi$ rather than $\theta$. Researchers may or may not be able to formulate prior expectations exist about $\mu_{\psi}$ and $\kappa$. Regardless, this method allows straightforward specification of a non-informative prior by setting $R_0 = 0$ and $c = 0$.
+
+For each $\beta$, a normal prior will be specified as
+\begin{equation}
+\beta \sim N(0, 10).
+\end{equation}
+
+This choice of prior will be examined in the following section.
+
 
 
 \section{MCMC Sampling}
 
+This section will provide some details as to the proposed MCMC-algorithm, given in Algorithm \ref{basealg}. The algorithm separates the sampling of $(\beta_0, \kappa)$ and $\boldsymbol\beta$ by calculating $\boldsymbol\psi$ and using $\boldsymbol\psi$ in obtaining $(\beta_0, \kappa)$. Sampling of $\kappa$ employs an algorithm discussed by \citet{forbes2014fast} and will not be repeated here.
 
+A random walk mechanism is employed for $\boldsymbol\beta$. This requires setting some bandwith, which may be considered a downside ofthis algorithm.
 
 \begin{algorithm}[H]
 
@@ -246,10 +263,9 @@ The standard deviation of the normal prior
 
   Draw $\beta_0^{(i)} \sim \mathcal{VM}(\bar\psi, R_{\psi} \kappa).$
 
-
   $\eta = - R_\psi * \cos\left(\beta_0 - \bar{\psi}\right).$
 
-  $\kappa^{(i)} = \texttt{sampleKappa}(\eta, m).$
+  Sample $\kappa$ as in \citet{forbes2014fast}, using $(\eta, m).$
 
   \For{$j \leftarrow 1$ \KwTo $K$}{
 
@@ -275,31 +291,32 @@ The standard deviation of the normal prior
 
   }
  \caption{An algorithm for the given GLM approach}
+ \label{basealg}
 \end{algorithm}
 
 
 
-
-\section{The model}
-
-\begin{itemize}
-\item Multivariate von Mises distribution
-\item Other multivariate circular distributions?
-\item Notation
-\item Link function
-\item Likelihood
-\item Prior
-\item Posterior
-\end{itemize}
-
-\section{Computational issues}
-
-\begin{itemize}
-\item Shape of the marginal likelihood for some common cases
-\item Selection of starting values
-\item Non-interpretability of beta's
-\item Solutions
-\end{itemize}
+%
+% \section{The model}
+%
+% \begin{itemize}
+% \item Multivariate von Mises distribution
+% \item Other multivariate circular distributions?
+% \item Notation
+% \item Link function
+% \item Likelihood
+% \item Prior
+% \item Posterior
+% \end{itemize}
+%
+% \section{Computational issues}
+%
+% \begin{itemize}
+% \item Shape of the marginal likelihood for some common cases
+% \item Selection of starting values
+% \item Non-interpretability of beta's
+% \item Solutions
+% \end{itemize}
 
 \section{Simulation study}
 
