--- a/Spread/Article/Preknitr/ACircularOutcomeBayesianGLM.tex
+++ b/Spread/Article/Preknitr/ACircularOutcomeBayesianGLM.tex
@@ -210,9 +210,9 @@ Due to the periodical nature of the outcome variable $\theta$, the conditional p
 
 
 
+\appendix
 
-
-\section*{Appendix A: Conditional distribution of $\beta_0$} \label{beta0}
+\section{Conditional distribution of $\beta_0$} \label{beta0}
 
 Here, I will show that the conditional distribution for $\beta_0$,
 $$ L(\beta_0 \vert \boldsymbol\beta, \kappa, \theta, \boldsymbol{X}) \propto \exp \left\lbrace \kappa \sum_{i=1}^n \cos \left[ \theta_i - (\beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i)) \right]  \right\rbrace \propto \mathcal{VM}(\beta_0 \vert \bar\psi, R_{\psi}\kappa). $$
