--- a/Spread/Article/ACircularOutcomeBayesianGLMKnitr.Rnw
+++ b/Spread/Article/ACircularOutcomeBayesianGLMKnitr.Rnw
@@ -32,11 +32,18 @@
 <<FreshPrinceOfSetup, include = FALSE>>=
 library(knitr)
 library(ggthemes)
-require(grid)
-require(gridExtra)
+library(grid)
+library(gridExtra)
+library(ggplot2)
 
-opts_chunk$set(fig.path='figure/', fig.align='center', fig.show='hold', fig.height=4, fig.width=10, echo=FALSE, warning=FALSE, message=FALSE)
+
+opts_chunk$set(fig.path='figure/', fig.align='center', fig.show='hold', fig.height=3, fig.width=10, echo=FALSE, warning=FALSE, message=FALSE)
 opts_knit$set(root.dir = "C:/Dropbox/Research/BayesMultCircCovariates")
+
+setwd(opts_knit$get('root.dir'))
+source("Spread/Figures/plotBetaLL.R")
+
+myTheme <- theme_hc
 
 @
 
@@ -44,7 +51,7 @@ opts_knit$set(root.dir = "C:/Dropbox/Research/BayesMultCircCovariates")
 
 Circular data is data that is measured in angles or directions. They are frequently encountered in scientific fields as diverse as Molecular Biology, Cognitive Psychology, Political Science \citep{gill2010} and Earth Sciences. Circular data differ from linear data in the sense that circular data are measured in a periodical sample space. For example, an angle of $1^{\circ}$ is quite close to an angle $359^{\circ},$ although linear intuition would suggest otherwise.
 
-Because of this, linear models may not fully describe the process that has generated the circular data of interest. Circular data analysis has been developed to deal with this, but the attention to this type of data has been limited. Only slightly more than a handful of in-depth books on circular data analysis have been published \citep{fisher1995statistical,mardia1999directional,pewsey2013circular}, and statistical methods are generally fairly limited. The Bayesian paradigm, in particular MCMC methods, may provide a flexible new approach to analyzing circular data.
+Because of this, linear models may not describe the process that has generated the circular data of interest well. Circular data analysis has been developed to deal with this, but the attention to this type of data has been limited. Only slightly more than a handful of in-depth books on circular data analysis have been published \citep{fisher1995statistical,mardia1999directional,pewsey2013circular}, and statistical methods are generally fairly limited. The Bayesian paradigm, in particular MCMC methods, may provide a flexible approach to analyzing circular data.
 
 The circular analogue to the normal distribution is the von Mises distribution \citep{von1918ganzzahligkeit}. This symmetric unimodal distribution is given by
 \begin{equation}
@@ -57,9 +64,7 @@ A Bayesian circular data regression analysis is performed and applied by \citet{
 
 Recent work has provided a multivariate extension of the von Mises distribution \citep{mardia2008multivariate,mardia2014some}. \citet{lagona2014regression} extends this to the General Linear Model (GLM) setting, applying MCMC likelihood approximation as in \citet{geyer1992constrained} to obtain Maximum Likelihood Estimates (MLEs). This approach is not fully Bayesian, but it is a promising approach because of its flexibility, allowing both the mean and concentration to be dependent on an arbitrary set of covariates, as well as allowing observations to be dependent.
 
-In this paper, a novel fully Bayesian method for the analysis of circular data will be developed. It's application will be made accessible, and potential issues will be studied. Finally, simulations into its performance will be discussed.
-
-The GLM approach to analysis of circular data is not free from the lack of concavity as described in \citet{gill2010}, although this has not been investigated in literature. In this paper, the GLM approach will applied in a fully Bayesian setting. Furthermore, the lack of concavity in the likelihoods will be examined, and suggestions will be formulated on how to deal with this issue.
+In this paper, a novel fully Bayesian method for the analysis of circular data will be developed. Its application will be made accessible, and potential issues will be studied. The GLM approach to analysis of circular data is not free from the lack of concavity as described in \citet{gill2010}, although this has not been investigated in literature. In this paper, the GLM approach will be applied in a fully Bayesian setting. Furthermore, the lack of concavity in the likelihoods will be examined, and suggestions will be formulated on how to deal with this issue. Finally, simulations into its performance will be discussed.
 
 \section{The Model}
 
@@ -76,10 +81,22 @@ The link function maps $\boldsymbol\beta^T \boldsymbol{x}_i \in \mathbb{R}$ to t
 A popular choice is
 \begin{equation}
 g(x) = 2 \tan^{-1}(x),
-\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}. To ensure that all , all predictors must be standardized. % Mind you, it is probably better to add parameters to the model that account for mean and variance of the predictors. This might take into account the uncertainty about the mean and variance of the predictor?! Discuss.
+\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}. To ensure that all , all predictors must be standardized. 
 
 \begin{figure}
-{\centering \includegraphics[width=\linewidth]{figure/Link.pdf} }
+<<Link, echo=FALSE, out.width="\\linewidth">>=
+# Link functions
+linkfun    <- function(x) 2 * atan(x)
+invlinkfun <- function(x) tan(x/2)
+
+xl <- c(-20, 20)
+yl <- c(-pi, pi)
+ggplot(data.frame(x = xl), aes(x)) +
+  stat_function(fun = linkfun, size=1) +
+  scale_x_continuous(breaks=seq(xl[1], xl[2], length.out = 11)) +
+  xlab("x") + ylab(expression(paste(g(x),"=", 2, tan^-1, (x)))) +
+  scale_y_continuous(breaks=round(seq(yl[1], yl[2], length.out = 7))) + myTheme()
+@
 \caption{Link function $g(x) = 2 \tan^{-1}(x).$}
 \label{linkfunc}
 \end{figure}
@@ -92,16 +109,12 @@ L(\beta_0, \boldsymbol{\beta}, \kappa \vert \boldsymbol{\theta}, \boldsymbol{X})
 &=  \left\lbrace 2 \pi I_0(\kappa) \right\rbrace^{-n} \exp \left\lbrace \kappa \sum_{i=1}^{n} \cos \left[ \theta_i - \beta_0 - g(\boldsymbol\beta^T \boldsymbol{x}_i) \right]  \right\rbrace.
 \end{align}
 
-%It can be shown (see Appendix A) that the conditional distribution of $\beta_0$ is proportional to $\mathcal{VM}(\beta_0 \vert \bar\psi, R_{\psi} \kappa).$ This makes it straightforward to sample from $\beta_0$ as in \citet{fisher1995statistical}. %Conditionals for $\kappa$ and $\boldsymbol\beta$ are not of known form and require special attention.
+It can be shown (see Appendix A) that the conditional distribution of $\beta_0$ is proportional to $\mathcal{VM}(\beta_0 \vert \bar\psi, R_{\psi} \kappa).$ This makes it straightforward to sample from $\beta_0$ as in \citet{fisher1995statistical}. Conditionals for $\kappa$ and $\boldsymbol\beta$ are not of simple form and require special attention.
 
 
 \subsection{Shape of the conditional likelihood of $\beta$}
 
-<<BetaPlotSetup>>=
-setwd(opts_knit$get('root.dir'))
-source("Spread/Figures/plotBetaLL.R")
-require(ggplot2)
-@
+
 
 The conditional log-likelihood of $\boldsymbol{\beta}$ is independent of $\kappa$ and given by
 \begin{align}
@@ -119,8 +132,6 @@ Due to the periodical nature of the outcome variable $\theta$, the conditional l
 \label{SimpleDataset}
 <<SimpleDataset>>=
 source("Code/describeCirc.R")
-
-myTheme <- theme_hc
 
 set.seed(212)
 n <- 7
@@ -157,9 +168,7 @@ grid.arrange(ll3p1, ll2p1, ll1p1, ncol=3)
 \label{SimpleDataBeta}
 \end{figure}
 
-Another example dataset is given in Figure \ref{ZeroBData}. Here, true $\beta$ is zero, and the predictor $X$ consists of a sample with $n=30$ from the normal distribution that was standardized. Once again, true $\beta_0 = \pi$.
-
-
+Another example dataset is given in Figure \ref{ZeroBData}. Here, true $\beta$ is zero, and the predictor $X$ consists of a sample with $n=30$ from the normal distribution that was standardized. Once again, true $\beta_0 = \pi$. The main message is that there are many different and unpredictable forms that $\beta$ can take, and it is not straightforward to sample from its conditionals.
 
 \begin{figure}
 \label{ZeroBData}
@@ -204,10 +213,10 @@ ll3p1 <- plotbeta(normalPrior=FALSE, res=res, xl=xl, b0=pi,
                   kp=1, r=2, th=th, X=X) +
   myTheme() + labs(title=expression(paste(beta[0], " = ", pi)))
 
-grid.arrange(ll1p1, ll2p1, ll3p1, ncol=3)
+grid.arrange(ll3p1, ll2p1, ll1p1, ncol=3)
 
 @
-\caption{RHS of conditional likelihood.}
+\caption{Shape of the conditional likelihood for three different values for $\beta_0$.}
 \label{ZeroBBeta}
 \end{figure}
 
@@ -226,21 +235,17 @@ For each $\beta$, a normal prior will be specified as
 \beta \sim N(0, 10).
 \end{equation}
 
-This choice of prior will be examined in the following section.
-
-
-
 \section{MCMC Sampling}
 
 This section will provide some details as to the proposed MCMC-algorithm, given in Algorithm \ref{basealg}. The algorithm separates the sampling of $(\beta_0, \kappa)$ and $\boldsymbol\beta$ by calculating $\boldsymbol\psi$ and using $\boldsymbol\psi$ in obtaining $(\beta_0, \kappa)$. Sampling of $\kappa$ employs an algorithm discussed by \citet{forbes2014fast} and will not be repeated here.
 
-A random walk mechanism is employed for $\boldsymbol\beta$. This requires setting some bandwith, which may be considered a downside ofthis algorithm.
+A random walk mechanism is employed for $\boldsymbol\beta$. This requires setting some bandwith, which may be considered a downside of this algorithm.
 
 \begin{algorithm}[H]
 
- For each $\beta_j$, select an appropriate bandwith $b_j.$
+\texttt{For each $\beta_j$, select an appropriate bandwith $b_j.$}
 
- Set $\boldsymbol{\beta}^{(1)}$ and $\kappa^{(1)}$ to their starting values.
+\texttt{Set $\boldsymbol{\beta}^{(1)}$ and $\kappa^{(1)}$ to their starting values.}
 
  $m = n + c.$
 
@@ -337,9 +342,9 @@ A random walk mechanism is employed for $\boldsymbol\beta$. This requires settin
 
 
 
+\appendix
 
-
-\section*{Appendix A: Conditional distribution of $\beta_0$} \label{beta0}
+\section{Conditional distribution of $\beta_0$} \label{beta0}
 
 Here, I will show that the conditional distribution for $\beta_0$,
 $$ L(\beta_0 \vert \boldsymbol\beta, \kappa, \theta, \boldsymbol{X}) \propto \exp \left\lbrace \kappa \sum_{i=1}^n \cos \left[ \theta_i - (\beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i)) \right]  \right\rbrace \propto \mathcal{VM}(\beta_0 \vert \bar\psi, R_{\psi}\kappa). $$
