--- a/Spread/Article/ACircularOutcomeBayesianGLMKnitr.Rnw
+++ b/Spread/Article/ACircularOutcomeBayesianGLMKnitr.Rnw
@@ -81,7 +81,7 @@ The link function maps $\boldsymbol\beta^T \boldsymbol{x}_i \in \mathbb{R}$ to t
 A popular choice is
 \begin{equation}
 g(x) = 2 \tan^{-1}(x),
-\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}. To ensure that all , all predictors must be standardized. 
+\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}. To ensure that all , all predictors must be standardized.
 
 \begin{figure}
 <<Link, echo=FALSE, out.width="\\linewidth">>=
@@ -137,7 +137,7 @@ set.seed(212)
 n <- 7
 X  <- scale(as.matrix(seq(-3, 3, length.out = n)))
 bt <- 1
-th <- pi + atanlf(bt*X, 2) + rnorm(n, 0, .1)
+th <- pi + atanLF(bt*X, 2) + rnorm(n, 0, .1)
 d <- data.frame(th=th, X=X)
 ggplot(aes(x=X, y=th), data=d) + geom_point() + ylab(expression(theta))  + ylim(0, 2*pi) + myTheme()
 @
@@ -181,7 +181,7 @@ n <- 30
 X  <- scale(as.matrix(rnorm(n)))
 
 bt <- 0
-th <- pi + atanlf(bt*X, 2) + rnorm(n, 0, .8)
+th <- pi + atanLF(bt*X, 2) + rnorm(n, 0, .8)
 
 d <- data.frame(th=th, X=X)
 
@@ -234,6 +234,39 @@ For each $\beta$, a normal prior will be specified as
 \begin{equation}
 \beta \sim N(0, 10).
 \end{equation}
+
+
+\section{Categorical predictors}
+
+<<CatData>>=
+
+set.seed(212)
+n <- 100
+X  <- sample(0:1, n, replace=TRUE)
+bt <- 1
+th <- pi + atanLF(bt*X, 2) + rnorm(n, 0, .4)
+d <- data.frame(th=th, X=X)
+ggplot(aes(x=X, y=th), data=d) + geom_point() + ylab(expression(theta))  + ylim(0, 2*pi) + myTheme()
+
+meanDir(th[X==0])
+@
+
+<<CatBetaPlot>>=
+res <- 200
+b0cur <- 0
+xl <- 5 * c(-1, 1)
+ll1p1 <- plotbeta(normalPrior=FALSE, res=res, xl=xl, b0=0,
+                  kp=1, r=4, th=th, X=as.matrix(X)) +
+  myTheme() + labs(title=expression(paste(beta[0], " = 0")))
+ll2p1 <- plotbeta(normalPrior=FALSE, res=res, xl=xl, b0=pi/2,
+                  kp=1, r=2, th=th, X=as.matrix(X)) +
+  myTheme() + labs(title=expression(paste(beta[0], " = ", pi / 2)))
+ll3p1 <- plotbeta(normalPrior=FALSE, res=res, xl=xl, b0=pi,
+                  kp=1, r=2, th=th, X=as.matrix(X)) +
+  myTheme() + labs(title=expression(paste(beta[0], " = ", pi)))
+grid.arrange(ll3p1, ll2p1, ll1p1, ncol=3)
+@
+
 
 \section{MCMC Sampling}
 
