--- a/Spread/Article/ACircularOutcomeBayesianGLMKnitr.Rnw
+++ b/Spread/Article/ACircularOutcomeBayesianGLMKnitr.Rnw
@@ -111,8 +111,22 @@ L(\beta_0, \boldsymbol{\beta}, \kappa \vert \boldsymbol{\theta}, \boldsymbol{X})
 
 It can be shown (see Appendix A) that the conditional distribution of $\beta_0$ is proportional to $\mathcal{VM}(\beta_0 \vert \bar\psi, R_{\psi} \kappa).$ This makes it straightforward to sample from $\beta_0$ as in \citet{fisher1995statistical}. Conditionals for $\kappa$ and $\boldsymbol\beta$ are not of simple form and require special attention.
 
+\subsection{Prior}
 
-\subsection{Shape of the conditional likelihood of $\beta$}
+For $\beta_0$ and $\kappa$, a conjugate prior will be used. Setting $\psi_i = \theta_i - g(\boldsymbol\beta^T \boldsymbol{x}_i)$ leaves us with simply the regular von Mises likelihood $L_{\mathcal{VM}}(\beta_0, \kappa \vert \boldsymbol\psi)$, where $\beta_0$ is the mean direction. \citet{guttorp1988finding} present a conjugate prior for the von Mises distribution. Applied to this situation, it is given up to a constant of proportionality by
+\begin{equation}
+p(\mu_{\psi}, \kappa) \propto  I_0 (\kappa) ^{-c} \exp\{R_0 \kappa \cos (\mu_{\psi} - \mu_0)\},
+\end{equation}
+where $\mu_{\psi}$ represents the mean direction of the set of angles $\boldsymbol\psi$,  which represents $c$ observations of $\psi$ with prior mean direction $\mu_0$ and prior resultant length $R_0$. Note, however, that in this case this represents our prior information regarding the distribution of $\psi$ rather than $\theta$. Researchers may or may not be able to formulate prior expectations exist about $\mu_{\psi}$ and $\kappa$. Regardless, this method allows straightforward specification of a non-informative prior by setting $R_0 = 0$ and $c = 0$.
+
+For each $\beta$, a normal prior will be specified as
+\begin{equation}
+\beta \sim N(0, 10).
+\end{equation}
+
+
+
+\subsection{Shape of the conditional likelihood and posterior of $\beta$}
 
 
 
@@ -188,7 +202,6 @@ d <- data.frame(th=th, X=X)
 ggplot(aes(x=X, y=th), data=d) + geom_point() + ylab(expression(theta)) + ylim(0, 2*pi) + myTheme()
 @
 \caption{Relationship between the predictor $X$ and circular outcome $\theta$ in a simple case.}
-\label{ZeroBData}
 \end{figure}
 
 
@@ -217,23 +230,34 @@ grid.arrange(ll3p1, ll2p1, ll1p1, ncol=3)
 
 @
 \caption{Shape of the conditional likelihood for three different values for $\beta_0$.}
-\label{ZeroBBeta}
 \end{figure}
 
-The standard deviation of the normal prior
+\begin{figure}
+\label{ZeroBBetaNormalPrior}
+<<ZeroBBetaNormalPrior>>=
 
-\subsection{Prior}
 
-For $\beta_0$ and $\kappa$, a conjugate prior will be used. Setting $\psi_i = \theta_i - g(\boldsymbol\beta^T \boldsymbol{x}_i)$ leaves us with simply the regular von Mises likelihood $L_{\mathcal{VM}}(\beta_0, \kappa \vert \boldsymbol\psi)$, where $\beta_0$ is the mean direction. \citet{guttorp1988finding} present a conjugate prior for the von Mises distribution. Applied to this situation, it is given up to a constant of proportionality by
-\begin{equation}
-p(\mu_{\psi}, \kappa) \propto  I_0 (\kappa) ^{-c} \exp\{R_0 \kappa \cos (\mu_{\psi} - \mu_0)\},
-\end{equation}
-where $\mu_{\psi}$ represents the mean direction of the set of angles $\boldsymbol\psi$,  which represents $c$ observations of $\psi$ with prior mean direction $\mu_0$ and prior resultant length $R_0$. Note, however, that in this case this represents our prior information regarding the distribution of $\psi$ rather than $\theta$. Researchers may or may not be able to formulate prior expectations exist about $\mu_{\psi}$ and $\kappa$. Regardless, this method allows straightforward specification of a non-informative prior by setting $R_0 = 0$ and $c = 0$.
+myTheme <- theme_hc
+b0cur <- 0
+xl <- 15 * c(-1, 1)
 
-For each $\beta$, a normal prior will be specified as
-\begin{equation}
-\beta \sim N(0, 10).
-\end{equation}
+ll1p1 <- plotbeta(normalPrior=TRUE, res=res, xl=xl, b0=0,
+                  kp=1, r=2, th=th, X=X) +
+  myTheme() + labs(title=expression(paste(beta[0], " = 0")))
+ll2p1 <- plotbeta(normalPrior=TRUE, res=res, xl=xl, b0=pi/2,
+                  kp=1, r=2, th=th, X=X) +
+  myTheme() + labs(title=expression(paste(beta[0], " = ", pi / 2)))
+ll3p1 <- plotbeta(normalPrior=TRUE, res=res, xl=xl, b0=pi,
+                  kp=1, r=2, th=th, X=X) +
+  myTheme() + labs(title=expression(paste(beta[0], " = ", pi)))
+
+grid.arrange(ll3p1, ll2p1, ll1p1, ncol=3)
+
+@
+\caption{Shape of the conditional posterior for three different values for $\beta_0$.}
+\end{figure}
+
+The shape of the posterior is somewhat more regular, as seen in Figure \ref{ZeroBBetaNormalPrior}.
 
 
 \section{Categorical predictors}
@@ -272,7 +296,7 @@ grid.arrange(ll3p1, ll2p1, ll1p1, ncol=3)
 
 This section will provide some details as to the proposed MCMC-algorithm, given in Algorithm \ref{basealg}. The algorithm separates the sampling of $(\beta_0, \kappa)$ and $\boldsymbol\beta$ by calculating $\boldsymbol\psi$ and using $\boldsymbol\psi$ in obtaining $(\beta_0, \kappa)$. Sampling of $\kappa$ employs an algorithm discussed by \citet{forbes2014fast} and will not be repeated here.
 
-A random walk mechanism is employed for $\boldsymbol\beta$. This requires setting some bandwith, which may be considered a downside of this algorithm.
+A random walk mechanism is employed for $\boldsymbol\beta$. This requires setting some bandwith, which may be considered a downside of this algorithm. We might suggest using a default normal proposal for beta, because the expected area of the parameter space of $\beta$ will be known.
 
 \begin{algorithm}[H]
 
@@ -320,6 +344,7 @@ A random walk mechanism is employed for $\boldsymbol\beta$. This requires settin
  \caption{An algorithm for the given GLM approach}
  \label{basealg}
 \end{algorithm}
+
 
 
 
